# test

./: .gitmodules  CMakeLists.txt  README.md  build.sh  rebuild.sh
src/: main.c  sdl.c  sdl.h
ups/: build.sh
